
[TestSimple - 1]
Tag
 OpenTag
 Name: a
 ElementSuffixOpen
  ContentData
  Data: hello
  CloseTag
  Name: a

---

[TestNesting - 1]
Tag
 OpenTag
 Name: a
 ElementSuffixOpen
  ContentElement
   Tag
    OpenTag
    Name: b
    ElementSuffixOpen
     ContentData
     Data: Something
     CloseTag
     Name: b
  CloseTag
  Name: a

---

[TestSelfClosing - 1]
Tag
 OpenTag
 Name: atag
  Attributes
  Name: bruh
  String: hello-world
 ElementSuffixClose

---

[TestAttributes - 1]
Tag
 OpenTag
 Name: a
  Attributes
  Name: hello
  String: world
 ElementSuffixOpen
  CloseTag
  Name: a

---

[TestBigObject - 1]
Tag
 OpenTag
 Name: Tests
  Attributes
  Name: xmlns
  String: http://www.adatum.com
 ElementSuffixOpen
  ContentElement
   Tag
    OpenTag
    Name: Test
     Attributes
     Name: TestId
     String: 0001
      Attributes
      Name: TestType
      String: CMD
    ElementSuffixOpen
     ContentElement
      Tag
       OpenTag
       Name: Name
       ElementSuffixOpen
        ContentData
        Data: Convert number to string
        CloseTag
        Name: Name
      ContentElement
       Tag
        OpenTag
        Name: CommandLine
        ElementSuffixOpen
         ContentData
         Data: Examp1.EXE
         CloseTag
         Name: CommandLine
       ContentElement
        Tag
         OpenTag
         Name: Input
         ElementSuffixOpen
          ContentData
          Data: 1
          CloseTag
          Name: Input
        ContentElement
         Tag
          OpenTag
          Name: Output
          ElementSuffixOpen
           ContentData
           Data: One
           CloseTag
           Name: Output
     CloseTag
     Name: Test
   ContentElement
    Tag
     OpenTag
     Name: Test
      Attributes
      Name: TestId
      String: 0002
       Attributes
       Name: TestType
       String: CMD
     ElementSuffixOpen
      ContentElement
       Tag
        OpenTag
        Name: Name
        ElementSuffixOpen
         ContentData
         Data: Find succeeding characters
         CloseTag
         Name: Name
       ContentElement
        Tag
         OpenTag
         Name: CommandLine
         ElementSuffixOpen
          ContentData
          Data: Examp2.EXE
          CloseTag
          Name: CommandLine
        ContentElement
         Tag
          OpenTag
          Name: Input
          ElementSuffixOpen
           ContentData
           Data: abc
           CloseTag
           Name: Input
         ContentElement
          Tag
           OpenTag
           Name: Output
           ElementSuffixOpen
            ContentData
            Data: def
            CloseTag
            Name: Output
      CloseTag
      Name: Test
    ContentElement
     Tag
      OpenTag
      Name: Test
       Attributes
       Name: TestId
       String: 0003
        Attributes
        Name: TestType
        String: GUI
      ElementSuffixOpen
       ContentElement
        Tag
         OpenTag
         Name: Name
         ElementSuffixOpen
          ContentData
          Data: Convert multiple numbers to strings
          CloseTag
          Name: Name
        ContentElement
         Tag
          OpenTag
          Name: CommandLine
          ElementSuffixOpen
           ContentData
           Data: Examp2.EXE /Verbose
           CloseTag
           Name: CommandLine
         ContentElement
          Tag
           OpenTag
           Name: Input
           ElementSuffixOpen
            ContentData
            Data: 123
            CloseTag
            Name: Input
          ContentElement
           Tag
            OpenTag
            Name: Output
            ElementSuffixOpen
             ContentData
             Data: One Two Three
             CloseTag
             Name: Output
       CloseTag
       Name: Test
     ContentElement
      Tag
       OpenTag
       Name: Test
        Attributes
        Name: TestId
        String: 0004
         Attributes
         Name: TestType
         String: GUI
       ElementSuffixOpen
        ContentElement
         Tag
          OpenTag
          Name: Name
          ElementSuffixOpen
           ContentData
           Data: Find correlated key
           CloseTag
           Name: Name
         ContentElement
          Tag
           OpenTag
           Name: CommandLine
           ElementSuffixOpen
            ContentData
            Data: Examp3.EXE
            CloseTag
            Name: CommandLine
          ContentElement
           Tag
            OpenTag
            Name: Input
            ElementSuffixOpen
             ContentData
             Data: a1
             CloseTag
             Name: Input
           ContentElement
            Tag
             OpenTag
             Name: Output
             ElementSuffixOpen
              ContentData
              Data: b1
              CloseTag
              Name: Output
        CloseTag
        Name: Test
      ContentElement
       Tag
        OpenTag
        Name: Test
         Attributes
         Name: TestId
         String: 0005
          Attributes
          Name: TestType
          String: GUI
        ElementSuffixOpen
         ContentElement
          Tag
           OpenTag
           Name: Name
           ElementSuffixOpen
            ContentData
            Data: Count characters
            CloseTag
            Name: Name
          ContentElement
           Tag
            OpenTag
            Name: CommandLine
            ElementSuffixOpen
             ContentData
             Data: FinalExamp.EXE
             CloseTag
             Name: CommandLine
           ContentElement
            Tag
             OpenTag
             Name: Input
             ElementSuffixOpen
              ContentData
              Data: This is a test
              CloseTag
              Name: Input
            ContentElement
             Tag
              OpenTag
              Name: Output
              ElementSuffixOpen
               ContentData
               Data: 14
               CloseTag
               Name: Output
         CloseTag
         Name: Test
       ContentElement
        Tag
         OpenTag
         Name: Test
          Attributes
          Name: TestId
          String: 0006
           Attributes
           Name: TestType
           String: GUI
         ElementSuffixOpen
          ContentElement
           Tag
            OpenTag
            Name: Name
            ElementSuffixOpen
             ContentData
             Data: Another Test
             CloseTag
             Name: Name
           ContentElement
            Tag
             OpenTag
             Name: CommandLine
             ElementSuffixOpen
              ContentData
              Data: Examp2.EXE
              CloseTag
              Name: CommandLine
            ContentElement
             Tag
              OpenTag
              Name: Input
              ElementSuffixOpen
               ContentData
               Data: Test Input
               CloseTag
               Name: Input
             ContentElement
              Tag
               OpenTag
               Name: Output
               ElementSuffixOpen
                ContentData
                Data: 10
                CloseTag
                Name: Output
          CloseTag
          Name: Test
  CloseTag
  Name: Tests

---

[TestMedium - 1]
Tag
 OpenTag
 Name: a
 ElementSuffixOpen
  ContentElement
   Tag
    OpenTag
    Name: b
    ElementSuffixOpen
     ContentData
     Data: hello
     CloseTag
     Name: b
   ContentElement
    Tag
     OpenTag
     Name: c
     ElementSuffixOpen
      ContentElement
       Tag
        OpenTag
        Name: d
        ElementSuffixOpen
         ContentData
         Data: world
         CloseTag
         Name: d
       ContentElement
        Tag
         OpenTag
         Name: e
         ElementSuffixOpen
          ContentData
          Data: world2
          CloseTag
          Name: e
        ContentElement
         Tag
          OpenTag
          Name: f
          ElementSuffixOpen
           ContentData
           Data: world3
           CloseTag
           Name: f
      CloseTag
      Name: c
  CloseTag
  Name: a

---

[TestDoubleTesting - 1]
Tag
 OpenTag
 Name: a
 ElementSuffixOpen
  ContentElement
   Tag
    OpenTag
    Name: c
    ElementSuffixOpen
     ContentData
     Data: Hello
     CloseTag
     Name: c
   ContentElement
    Tag
     OpenTag
     Name: b
     ElementSuffixOpen
      ContentElement
       Tag
        OpenTag
        Name: d
        ElementSuffixOpen
         ContentData
         Data: 123
         CloseTag
         Name: d
       ContentElement
        Tag
         OpenTag
         Name: d
         ElementSuffixOpen
          ContentData
          Data: 321
          CloseTag
          Name: d
      CloseTag
      Name: b
  CloseTag
  Name: a

---
